# digital-forensics-lab

./: .gitignore  Dockerfile  LICENSE  README.md  env.py  inference.py  main.py  mock_database.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tests/: test_env.py
